samples/_failures_safe/1761408135_ace841_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9590870.c: In function ‘main’:
./samples/SAFE/__tmp_f9590870.c:168:5: error: expected expression at end of input
  168 |     if (strlen(input) ==
      |     ^~
./samples/SAFE/__tmp_f9590870.c:168:5: error: expected declaration or statement at end of input
